Fix colours, mobile blog margin and figcaption text align

--- a/_sass/_blog.sass
+++ b/_sass/_blog.sass
@@ -91,7 +91,7 @@
     +border(0 2px)
     color: $copy
     // NOTE image and footer styles need updating if any of these paddings change!
-    padding: 0 1.66667rem
+    padding: 0 1rem
     max-width: 100%
     overflow: hidden
     grid-row: 2
@@ -111,7 +111,7 @@
       +border(right)
       padding: 0 7rem
     .footnotes
-      margin: 0 -1.666667rem
+      margin: 0 -1rem
       padding: 1rem
       +for-tablet-portrait-up
         margin: 0 -5rem
