--- a/_sass/_venn.sass
+++ b/_sass/_venn.sass
@@ -123,7 +123,7 @@
     &.one path
       fill: $primary
     &.two path
-      fill: $primary-light
+      fill: $primary-shadier
     &.three path
       fill: $primary
 
@@ -135,9 +135,9 @@
       path
         fill: $primary
     &.two path
-      fill: $primary-lighter
+      fill: $primary-shade
     &.three path
-      fill: $primary-lighter
+      fill: $primary-shade
 
   // Cursor is twice adjacent
   .hovered--2
@@ -145,8 +145,8 @@
       text
         fill: $primary
       path
-        fill: $primary-lighter
+        fill: $primary-shade
     &.two path
-      fill: $primary-light
+      fill: $primary-shadier
     &.three path
-      fill: $primary-light
+      fill: $primary-shadier
